# mandeven

./: .gitignore  Cargo.toml  README.md  mandeven.toml
.claude/: CLAUDE.md
.claude/rules/: code-style.md
.github/workflows/: ci.yml  release.yml
docs/: primitive-runtime-design.md
examples/: deepseek_cache_probe.rs
scripts/: install.sh
src/: lib.rs  main.rs  workspace.rs
src/agent/: command.rs  commands.rs  compact.rs  error.rs  mod.rs  types.rs
src/bus/: error.rs  mod.rs  types.rs
src/channels/: error.rs  manager.rs  mod.rs
src/cli/: commands.rs  mod.rs
src/command/: builtins.rs  mod.rs  slash.rs
src/config/: bootstrap.rs  error.rs  loader.rs  mod.rs  paths.rs  types.rs
src/cron/: engine.rs  error.rs  mod.rs  schedule.rs  store.rs  types.rs
src/dream/: engine.rs  error.rs  mod.rs  store.rs
src/exec/: error.rs  mod.rs
src/gateway/: bindings.rs  commands.rs  mod.rs
src/heartbeat/: engine.rs  mod.rs
src/hook/: engine.rs  error.rs  mod.rs  types.rs
src/llm/: client.rs  error.rs  mod.rs  types.rs  utils.rs
src/memory/: error.rs  mod.rs  store.rs
src/prompt/: context.rs  engine.rs  error.rs  mod.rs  section.rs  specialized.rs  static_prompt.rs  templates.rs
src/run/: error.rs  mod.rs
src/security/: commands.rs  mod.rs  network.rs  policy.rs
src/session/: error.rs  mod.rs
src/skill/: builtin.rs  error.rs  loader.rs  mod.rs  types.rs
src/skills/: mod.rs
src/task/: error.rs  mod.rs  store.rs
src/timer/: engine.rs  error.rs  global.rs  mod.rs  schedule.rs  store.rs
src/tools/: cron.rs  dream.rs  error.rs  file.rs  grep.rs  (+10 more)
(+33 files in other folders)
